Ported CNPC-EF-Addon to 1.19.2