@@ -1,9 +1,12 @@
 package com.goodbird.cnpcefaddon;
 
+import com.goodbird.cnpcefaddon.common.AdvNpcPatchReloader;
 import com.goodbird.cnpcefaddon.common.NpcPatchReloadListener;
+import com.goodbird.cnpcefaddon.common.network.NetworkHandler;
 import com.goodbird.cnpcefaddon.common.network.SPDatapackSync;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.server.packs.resources.PreparableReloadListener;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.event.AddReloadListenerEvent;
 import net.minecraftforge.event.OnDatapackSyncEvent;
@@ -15,6 +18,7 @@ import net.minecraftforge.fml.javafmlmod.FMLJavaModLoadingContext;
 import yesman.epicfight.network.EpicFightNetworkManager;
 
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Mod(CNPCEpicFightAddon.MODID)
@@ -29,26 +33,31 @@ public class CNPCEpicFightAddon {
     }
 
     private void doCommonStuff(FMLCommonSetupEvent event) {
-        EpicFightNetworkManager.INSTANCE.registerMessage(99, SPDatapackSync.class, SPDatapackSync::toBytes, SPDatapackSync::fromBytes, SPDatapackSync::handle);
+        NetworkHandler.register();
     }
 
     private void reloadListenerEvent(AddReloadListenerEvent event) {
         event.addListener(new NpcPatchReloadListener());
+        if(ModList.get().isLoaded("indestructible")){
+            try {
+                event.addListener((PreparableReloadListener) Class.forName("com.goodbird.cnpcefaddon.common.AdvNpcPatchReloader").getConstructor().newInstance());
+            }catch (Exception e){}
+        }
     }
 
     private void onDatapackSync(OnDatapackSyncEvent event) {
         ServerPlayer player = event.getPlayer();
         SPDatapackSync mobPatchPacket = new SPDatapackSync(NpcPatchReloadListener.TAGMAP.size());
-        for(CompoundTag tag : NpcPatchReloadListener.getDataStream().toList()){
+        for(CompoundTag tag : NpcPatchReloadListener.getDataStream().collect(Collectors.toList())){
             mobPatchPacket.write(tag);
         }
         if (player != null) {
             if (!player.getServer().isSingleplayerOwner(player.getGameProfile())) {
-                EpicFightNetworkManager.sendToPlayer(mobPatchPacket, player);
+                NetworkHandler.send(player, mobPatchPacket);
             }
         } else {
             event.getPlayerList().getPlayers().forEach((serverPlayer) -> {
-                EpicFightNetworkManager.sendToPlayer(mobPatchPacket, serverPlayer);
+                NetworkHandler.send(serverPlayer, mobPatchPacket);
             });
         }
 
